--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
    "name": "youid",
-   "version": "1.0.0",
-   "description": "",
+   "version": "1.0.1",
+   "description": "A lightweight utility to generate unique identifiers (UIDs) from strings or randomly.",
    "main": "./index.js",
    "type": "module",
+   "author": {
+      "name": "Naxrul Ahmed",
+      "email": "devnaxrul@gmail.com"
+   },
+   "repository": {
+      "type": "git",
+      "url": "https://github.com/devnax/youid.git"
+   },
    "scripts": {
       "start": "makepack serve",
       "pack": "makepack pack",
@@ -18,5 +26,12 @@
       "@types/react": "^19.0.2",
       "@types/react-dom": "^19.0.2"
    },
-   "keywords": []
+   "keywords": [
+      "uid",
+      "unique-id",
+      "hash",
+      "string-to-id",
+      "random-id",
+      "identifier"
+   ]
 }
