--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "youid",
-   "version": "1.0.2",
+   "version": "1.0.3",
    "description": "A lightweight utility to generate unique identifiers (UIDs) from strings or randomly.",
    "main": "./index.js",
    "type": "module",
@@ -17,14 +17,13 @@
       "pack": "makepack pack",
       "publish:pack": "makepack pack -p"
    },
-   "dependencies": {},
    "devDependencies": {
-      "makepack": "latest",
+      "@types/react": "^19.0.2",
+      "@types/react-dom": "^19.0.2",
+      "makepack": "^1.3.6",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
-      "typescript": "^4.4.2",
-      "@types/react": "^19.0.2",
-      "@types/react-dom": "^19.0.2"
+      "typescript": "^4.4.2"
    },
    "keywords": [
       "uid",
