--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
    "name": "youid",
-   "version": "1.0.4",
+   "version": "1.0.5",
    "description": "A lightweight utility to generate unique identifiers (UIDs) from strings or randomly.",
    "main": "./index.js",
+   "module": "./esm/index.js",
+   "types": "./types/index.d.ts",
    "type": "module",
    "author": {
       "name": "Naxrul Ahmed",
@@ -13,14 +15,14 @@
       "url": "https://github.com/devnax/youid.git"
    },
    "scripts": {
-      "start": "makepack serve",
-      "pack": "makepack pack",
-      "publish:pack": "makepack pack -p"
+      "start": "makepack start",
+      "build": "makepack build",
+      "build:publish": "makepack publish"
    },
    "devDependencies": {
       "@types/react": "^19.0.2",
       "@types/react-dom": "^19.0.2",
-      "makepack": "^1.4.0",
+      "makepack": "^1.5.5",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
       "typescript": "^4.4.2"
@@ -32,5 +34,18 @@
       "string-to-id",
       "random-id",
       "identifier"
-   ]
+   ],
+   "exports": {
+      ".": {
+         "types": "./types/index.d.ts",
+         "import": "./index.js",
+         "require": "./cjs/index.js"
+      },
+      "./types/*": "./types/*.d.ts",
+      "./cjs/*": "./cjs/*.js",
+      "./*": {
+         "import": "./*.js",
+         "require": "./cjs/*.js"
+      }
+   }
 }
