--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
    "name": "youid",
-   "version": "1.0.5",
+   "version": "1.0.6",
    "description": "A lightweight utility to generate unique identifiers (UIDs) from strings or randomly.",
-   "main": "./index.js",
-   "module": "./esm/index.js",
+   "main": "./cjs/index.js",
+   "module": "./index.js",
    "types": "./types/index.d.ts",
    "type": "module",
    "author": {
@@ -22,7 +22,7 @@
    "devDependencies": {
       "@types/react": "^19.0.2",
       "@types/react-dom": "^19.0.2",
-      "makepack": "^1.5.5",
+      "makepack": "^1.5.24",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
       "typescript": "^4.4.2"
@@ -34,18 +34,5 @@
       "string-to-id",
       "random-id",
       "identifier"
-   ],
-   "exports": {
-      ".": {
-         "types": "./types/index.d.ts",
-         "import": "./index.js",
-         "require": "./cjs/index.js"
-      },
-      "./types/*": "./types/*.d.ts",
-      "./cjs/*": "./cjs/*.js",
-      "./*": {
-         "import": "./*.js",
-         "require": "./cjs/*.js"
-      }
-   }
+   ]
 }
