--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "youid",
-   "version": "1.0.6",
+   "version": "1.0.7",
    "description": "A lightweight utility to generate unique identifiers (UIDs) from strings or randomly.",
    "main": "./cjs/index.js",
    "module": "./index.js",
@@ -17,15 +17,15 @@
    "scripts": {
       "start": "makepack start",
       "build": "makepack build",
-      "build:publish": "makepack publish"
+      "publish": "makepack publish"
    },
    "devDependencies": {
       "@types/react": "^19.0.2",
       "@types/react-dom": "^19.0.2",
-      "makepack": "^1.5.24",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
-      "typescript": "^4.4.2"
+      "typescript": "^4.4.2",
+      "makepack": "^1.6.3"
    },
    "keywords": [
       "uid",
