--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
    "name": "youid",
-   "version": "1.0.9",
+   "version": "1.0.10",
    "description": "A lightweight utility to generate unique identifiers (UIDs) from strings or randomly.",
    "main": "./cjs/index.js",
    "module": "./index.js",
-   "types": "./types/index.d.ts",
+   "types": "./index.d.ts",
    "type": "module",
    "author": {
       "name": "Naxrul Ahmed",
@@ -22,7 +22,7 @@
    "devDependencies": {
       "@types/react": "^19.0.2",
       "@types/react-dom": "^19.0.2",
-      "makepack": "^1.6.4",
+      "makepack": "^1.6.8",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
       "typescript": "^4.4.2"
@@ -34,5 +34,29 @@
       "string-to-id",
       "random-id",
       "identifier"
-   ]
+   ],
+   "sideEffects": false,
+   "exports": {
+      ".": {
+         "require": {
+            "types": "./index.d.ts",
+            "default": "./cjs/index.js"
+         },
+         "import": {
+            "types": "./index.d.ts",
+            "default": "./index.js"
+         }
+      },
+      "./*": {
+         "require": {
+            "types": "./*.d.ts",
+            "default": "./cjs/*.js"
+         },
+         "import": {
+            "types": "./*.d.ts",
+            "default": "./*.js"
+         }
+      },
+      "./cjs": null
+   }
 }
