--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "youid",
-   "version": "1.0.11",
+   "version": "1.0.12",
    "description": "A lightweight utility to generate unique identifiers (UIDs) from strings or randomly.",
    "main": "./index.js",
    "module": "./index.mjs",
@@ -24,8 +24,7 @@
       "@types/react-dom": "^19.0.2",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
-      "typescript": "^4.4.2",
-      "makepack": "^1.7.3"
+      "typescript": "^4.4.2"
    },
    "keywords": [
       "uid",
@@ -42,5 +41,8 @@
          "require": "./index.js",
          "types": "./index.d.ts"
       }
+   },
+   "dependencies": {
+      "makepack": "^1.7.5"
    }
 }
