--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
    "name": "youid",
    "version": "1.0.12",
-   "description": "A lightweight utility to generate unique identifiers (UIDs) from strings or randomly.",
-   "main": "./index.js",
-   "module": "./index.mjs",
-   "types": "./index.d.ts",
-   "type": "module",
    "author": {
       "name": "Naxrul Ahmed",
       "email": "devnaxrul@gmail.com"
@@ -14,18 +9,24 @@
       "type": "git",
       "url": "https://github.com/devnax/youid.git"
    },
-   "scripts": {
-      "start": "makepack start",
-      "build": "makepack build",
-      "release": "makepack release"
-   },
+   "main": "./index.js",
+   "module": "./index.mjs",
    "devDependencies": {
       "@types/react": "^19.0.2",
       "@types/react-dom": "^19.0.2",
+      "makepack": "^1.7.5",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
       "typescript": "^4.4.2"
    },
+   "exports": {
+      ".": {
+         "import": "./index.mjs",
+         "require": "./index.js",
+         "types": "./index.d.ts"
+      }
+   },
+   "description": "A lightweight utility to generate unique identifiers (UIDs) from strings or randomly.",
    "keywords": [
       "uid",
       "unique-id",
@@ -34,15 +35,12 @@
       "random-id",
       "identifier"
    ],
-   "sideEffects": false,
-   "exports": {
-      ".": {
-         "import": "./index.mjs",
-         "require": "./index.js",
-         "types": "./index.d.ts"
-      }
+   "scripts": {
+      "start": "makepack start",
+      "build": "makepack build",
+      "release": "makepack release"
    },
-   "dependencies": {
-      "makepack": "^1.7.5"
-   }
+   "sideEffects": false,
+   "type": "module",
+   "types": "./index.d.ts"
 }
